--- a/CSManagement/CSManagement/Views/Home/IndexUserGrap.cshtml
+++ b/CSManagement/CSManagement/Views/Home/IndexUserGrap.cshtml
@@ -78,7 +78,7 @@
                 </header>
             </div>
             <div class="col-md-4">
-                <button type="submit" class="btn btn-success" style="float:right"><i class="fa fa-search"></i> ค้นหาตามปี</button>
+                <button type="submit" class="btn btn-success" style="float:right;width:30%;font-size:70%"><i class="fa fa-search"></i> ค้นหาตามปี</button>
                 <div class="col-md-3" style=" float: right;width:70%">
                     @Html.DropDownList("Year", null, "เลือกปี", htmlAttributes: new { @class = "form-control" })
                 </div>
