--- a/CSManagement/CSManagement/Views/Generations/IndexUser.cshtml
+++ b/CSManagement/CSManagement/Views/Generations/IndexUser.cshtml
@@ -9,104 +9,93 @@
 @**@
 <head>
     <style>
+        .contentpage {
+            min-height: 250px;
+            padding: 10px;
+            margin-right: auto;
+            margin-left: auto;
+            padding-left: 30px;
+            padding-right: 30px;
+            background-color:white;
+        }
+
         .outer {
             padding: 1em 1em;
             box-shadow: 5px 5px 5px #d9d9d9;
         }
 
-        .headerbar {
-            background: #feac28 !important;
-            color: #ffffff !important;
-            position: relative;
-            margin-bottom: 0.5em;
-            margin-right: -2.5em;
-            margin-left: -2.5em;
-            box-shadow: 5px 5px 5px #d9d9d9;
+        .header1 {
+            border-bottom: 2px solid #207016;
         }
 
-            .headerbar:before {
-                content: "";
-                position: absolute;
-                border-bottom: 0.5em solid #333;
-                border-left: 1.5em solid transparent;
-                left: 5px;
-                top: -0.5em;
-            }
-
-            .headerbar:after {
-                content: "";
-                position: absolute;
-                border-top: 0.5em solid #333;
-                border-right: 1.5em solid transparent;
-                right: 5px;
-                bottom: -0.5em;
-            }
-
-            .headerbar:hover {
-                transform: scale(1,1.1);
-            }
+        .page-title {
+            color: #fff;
+            padding: 6px 12px;
+            display: inline-block;
+            font-size: 20px;
+            margin-bottom: 0px;
+            padding-bottom: 15px;
+            background-color: #207016;
+        }
     </style>
 </head>
 
 <body>
-    <section class="content">
-        <div class="box box-default">
-            <div class="box-header with-border">
+    <section class="contentpage">
+        <div class="row">
+            <div class="col-md-12">
+                <header class="header1">
+                    <h1 class="page-title">หลักสูตรอบรมระยะสั้น</h1>
+                </header>
+                <br />
                 <div class="row">
-                    <div class="col-md-12">
-                        <div class="panel panel-default outer" style="width:100%">
-                            <div class="panel-heading headerbar" style="text-align:center;font-size:20px">
-                                หลักสูตรอบรมระยะสั้น
-                            </div>
-                            <div class="panel-body text-justify">
-                                <table id="example1" class="table table-bordered table-striped" style="width:100%">
-                                    <thead>
-                                        <tr>
-                                            <th style="text-align:center">ที่</th>
-                                            <th style="text-align:center">@Html.DisplayNameFor(model => model.Short_Course.SC_NameTH)</th>
-                                            <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Name)</th>
-                                            <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Member)</th>
-                                            <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Year)</th>
-                                            <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Fee)</th>
-                                            <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Status1.Gen_Name)</th>
-                                            <th style="text-align:center">จัดการข้อมูล</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        @foreach (var item in Model)
-                                        {
-                                        <tr>
-                                            <td style="text-align:center">@(i++)</td>
-                                            <td>@Html.DisplayFor(modelItem => item.Short_Course.SC_NameTH)</td>
-                                            <td style="text-align:center">@Html.DisplayFor(modelItem => item.Gen_Name)</td>
-                                            <td style="text-align:center">@Html.DisplayFor(modelItem => item.Gen_Member)</td>
-                                            <td style="text-align:center">@Html.DisplayFor(modelItem => item.Gen_Year)</td>
-                                            <td style="text-align:right;color:forestgreen"><strong>@Html.DisplayFor(modelItem => item.Gen_Fee)-.</strong></td>
-                                            <td style="color:@(item.Gen_Status1.Gen_Name == "เปิดรับสมัคร"?"forestgreen":"red")">@Html.DisplayFor(modelItem => item.Gen_Status1.Gen_Name)</td>
-                                            <td style="text-align:center">
-                                                <button type="button" class="btn btn-success btn-sm  modal-link"
-                                                        data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">
-                                                    รายละเอียด
-                                                </button>
-                                                @*<button class="btn btn-info" type="button" data-toggle="modal" data-target="#myModal"><i class="fa fa-list-ul"></i> รายละเอียด</button>*@
-                                            </td>
-                                        </tr>
-                                        }
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
+                    <table id="example1" class="table table-bordered table-striped" style="width:100%">
+                        <thead>
+                            <tr>
+                                <th style="text-align:center">ที่</th>
+                                <th style="text-align:center">@Html.DisplayNameFor(model => model.Short_Course.SC_NameTH)</th>
+                                <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Name)</th>
+                                <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Member)</th>
+                                <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Year)</th>
+                                <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Fee)</th>
+                                <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Status1.Gen_Name)</th>
+                                <th style="text-align:center">จัดการข้อมูล</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td style="text-align:center">@(i++)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Short_Course.SC_NameTH)</td>
+                                    <td style="text-align:center">@Html.DisplayFor(modelItem => item.Gen_Name)</td>
+                                    <td style="text-align:center">@Html.DisplayFor(modelItem => item.Gen_Member)</td>
+                                    <td style="text-align:center">@Html.DisplayFor(modelItem => item.Gen_Year)</td>
+                                    <td style="text-align:right;color:forestgreen"><strong>@Html.DisplayFor(modelItem => item.Gen_Fee)-.</strong></td>
+                                    <td style="color:@(item.Gen_Status1.Gen_Name == "เปิดรับสมัคร"?"forestgreen":"red")">@Html.DisplayFor(modelItem => item.Gen_Status1.Gen_Name)</td>
+                                    <td style="text-align:center">
+                                        <button type="button" class="btn btn-success btn-sm  modal-link"
+                                                data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">
+                                            รายละเอียด
+                                        </button>
+                                        @*<button class="btn btn-info" type="button" data-toggle="modal" data-target="#myModal"><i class="fa fa-list-ul"></i> รายละเอียด</button>*@
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
     </section>
 </body>
 <link href="~/Content/DataTables/css/dataTables.bootstrap.min.css" rel="stylesheet" />
+<link href="~/Content/DataTables/css/responsive.bootstrap.min.css" rel="stylesheet" />
 @section Scripts{
     <script src="~/Scripts/DataTables/jquery.dataTables.min.js"></script>
     <script src="~/Scripts/DataTables/dataTables.bootstrap.min.js"></script>
-
+    <script src="~/Scripts/DataTables/dataTables.responsive.min.js"></script>
+    <script src="~/Scripts/DataTables/responsive.bootstrap.min.js"></script>
     <script type="text/javascript">
         $(function () {
 
@@ -118,8 +107,8 @@
                 $.get($(this).data("targeturl"), function (data) {
 
                     $('<div id="modal-container" class="modal fade" role="dialog">' +
-                        '<div class="modal-dialog">'+
-                        '<div class="modal-content" id= "modalbody" >'+
+                        '<div class="modal-dialog">' +
+                        '<div class="modal-content" id= "modalbody" >' +
                         data + '</div></div>').modal();
 
                 });
