--- a/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
+++ b/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
@@ -144,34 +144,34 @@
             @{
                 foreach (var item in ViewBag.ProjectCount)
                 {
-                    <div class="col-md-4">
-                        <div class="box box-widget widget-user-2">
-                            <div class="widget-user-header bg-yellow">
-                                <div class="widget-user-image">
-                                    <img class="img-circle" img src="~/img/icons8-cat-profile-64.png" />
+                        <div class="col-md-4">
+                            <div class="box box-widget widget-user-2">
+                                <div class="widget-user-header bg-yellow" style="height: 100%; padding: 10px">
+                                    <div class="widget-user-image">
+                                        <img class="img-circle" img src="~/img/icons8-cat-profile-64.png" />
+                                    </div>
+                                    <h3 class="widget-user-username" style="letter-spacing: 0px">@item.Pj_StuID</h3>
+                                    <h5 class="widget-user-desc" style="font-size:80%">@item.Pj_NameTH</h5>
                                 </div>
-                                <h3 class="widget-user-username" style="letter-spacing: 0px">@item.Pj_StuID</h3>
-                                <h5 class="widget-user-desc">จัดการข้อมูลสาขาวิทยาการคอมพิวเตอร์</h5>
-                            </div>
-                            <div class="box-footer no-padding">
-                                <ul class="nav nav-stacked">
-                                    <li><a target="_blank" href="@item.Pj_Linkweb">เว็บไซต์<span class="pull-right badge bg-blue">เข้าชม</span></a></li>
-                                    <li>
-                                        <a target="_blank" href="@Url.Action("ShowPdf", "Projects")?id=@item.Pj_ID">
-                                            รูปเล่ม
-                                            <span class="pull-right badge bg-aqua">เข้าชม</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a class="btn_4 video-btn" alt="video" data-toggle="modal" data-src="https://www.facebook.com/plugins/video.php?href=https://web.facebook.com/kru.cs/videos/@item.Pj_Video/" data-target="#myModal">
-                                            วิดีโอ
-                                            <span class="pull-right badge bg-aqua">เข้าชม</span>
-                                        </a>
-                                    </li>
-                                </ul>
+                                <div class="box-footer no-padding">
+                                    <ul class="nav nav-stacked">
+                                        <li><a target="_blank" href="@item.Pj_Linkweb">เว็บไซต์<span class="pull-right badge bg-blue">เข้าชม</span></a></li>
+                                        <li>
+                                            <a target="_blank" href="@Url.Action("ShowPdf", "Projects")?id=@item.Pj_ID">
+                                                รูปเล่ม
+                                                <span class="pull-right badge bg-aqua">เข้าชม</span>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="btn_4 video-btn" alt="video" data-toggle="modal" data-src="https://www.facebook.com/plugins/video.php?href=@item.Pj_Video" data-target="#myModal">
+                                                วิดีโอ
+                                                <span class="pull-right badge bg-green">เข้าชม</span>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
-                    </div>
                 }
             }
         </div>
