--- a/CSManagement/CSManagement/Views/Pictures/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Pictures/Index.cshtml
@@ -55,8 +55,8 @@
                 <thead>
                     <tr>
                         <th style="text-align:center">ที่</th>
-                        <th style="text-align:center">@Html.DisplayNameFor(model => model.Pic_Img)</th>
-                        <th style="text-align:center">@Html.DisplayNameFor(model => model.Pic_Name)</th>
+                        <th style="text-align:center">รูปภาพ</th>
+                        <th style="text-align:center">คำอธิบาย</th>
                         <th style="text-align:center">จัดการข้อมูล</th>
                     </tr>
                 </thead>
