--- a/CSManagement/CSManagement/Views/Applieds/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Applieds/Index.cshtml
@@ -30,9 +30,7 @@
                         <th style="text-align:center">
                             @Html.DisplayNameFor(model => model.Register_SC.REG_Name)
                         </th>
-                        <th style="text-align:center">
-                            @Html.DisplayNameFor(model => model.APP_Status)
-                        </th>
+                        <th style="text-align:center">สถานะ</th>
                         <th style="text-align:center">จัดการข้อมูล</th>
                     </tr>
                 </thead>
