--- a/CSManagement/CSManagement/Views/Schools/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Schools/Index.cshtml
@@ -12,7 +12,7 @@
                 <div class="col-md-12">
                     <h1 class="box-title">จัดการข้อมูลโรงเรียนมัธยมปลาย</h1>
                     <div style="float:right">
-                        <a class="btn btn-success" href="@Url.Action("Create", "Schools")"><i class="fa fa-plus"></i> เพิ่มข้อมูลการทำงาน</a>
+                        <a class="btn btn-success" href="@Url.Action("Create", "Schools")"><i class="fa fa-plus"></i> เพิ่มข้อมูลโรงเรียน</a>
                     </div>
                 </div>
             </div>
