แก้ข่าว โปรเจคเรียงตามหมู่เรียนและเรตติ่ง

--- a/CSManagement/CSManagement/Views/Home/IndexUserGrap.cshtml
+++ b/CSManagement/CSManagement/Views/Home/IndexUserGrap.cshtml
@@ -111,6 +111,14 @@
                                             </tr>
                                         }
                                     }
+                                    else
+                                    {
+                                        <tr>
+                                            <td style="text-align: center">@(i++)</td>
+                                            <td style="text-align: center">เลือกปี</td>
+                                            <td style="text-align: center">เลือกปี</td>
+                                        </tr>
+                                    }
                                 </tbody>
                             </table>
                         </div>
