--- a/CSManagement/CSManagement/Views/News/IndexUser.cshtml
+++ b/CSManagement/CSManagement/Views/News/IndexUser.cshtml
@@ -42,7 +42,7 @@
                         {
                             <img src="~/img/newicon.png" style="width:10%" />
                             <strong>@item.New_Name</strong>
-                            <a href="@Url.Action("IndexUser","News")">[อ่านต่อ]</a><br />
+                            <a href="@Url.Action("IndexUser","News")?id=@item.New_ID">[อ่านต่อ]</a><br />
                         }
                     }
                 </div>
@@ -59,5 +59,12 @@
                 }
             </div>
         </div>
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
     </section>
 </body>
