--- a/CSManagement/CSManagement/Views/Projects/Create.cshtml
+++ b/CSManagement/CSManagement/Views/Projects/Create.cshtml
@@ -12,7 +12,7 @@
     }
 </style>
 
-@if (ViewBag.ResultErrorMessage != null)
+@if (@ViewBag.ResultErrorMessage != null)
 {
     <script type="text/javascript">
 
