--- a/CSManagement/CSManagement/Views/Shared/_Header.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_Header.cshtml
@@ -50,10 +50,15 @@
                     <div class="navbar-custom-menu">
                         <ul class="nav navbar-nav">
                             <li class="dropdown user user-menu">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    <img src="~/img/icons8-cat-profile-64.png" class="user-image" alt="User Image">
-                                    <span class="hidden-xs">@Session["UserName"].ToString() @Session["UserSurname"].ToString()</span>
-                                </a>
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                                @if (Session["UserImg"].ToString().Equals("รอแก้ไข") != true)
+                                                {
+                                                    <img src="~/img/@Session["UserImg"]" class="user-image" alt="User Image">
+                                                }
+                                                else
+                                                {<img src="~/img/icons8-cat-profile-64.png" class="user-image" alt="User Image">}
+                                                <span class="hidden-xs">@Session["UserName"].ToString() @Session["UserSurname"].ToString()</span>
+                                            </a>
 
                                 <ul class="dropdown-menu">
                                     <li class="user-header">
