--- a/CSManagement/CSManagement/Views/Students/EditID.cshtml
+++ b/CSManagement/CSManagement/Views/Students/EditID.cshtml
@@ -35,7 +35,7 @@
     {
         <script type="text/javascript">
             window.onload = function () {
-                alert("@ViewBag.Message");
+                alert(@ViewBag.Message);
             };
         </script>
     }
