--- a/CSManagement/CSManagement/Views/Generations/Edit.cshtml
+++ b/CSManagement/CSManagement/Views/Generations/Edit.cshtml
@@ -5,10 +5,21 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@if (@ViewBag.Message != null)
+{
+    <script type="text/javascript">
+        window.onload = function () {
+            alert("@ViewBag.Message");
+        };
+    </script>
+}
+
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.Gen_NO)
+
     <section class="content">
         <div class="box box-default">
             <div class="box-header with-border">
@@ -36,19 +47,25 @@
                 </div>
 
                 <div class="row">
-                    <div class="form-group col-md-4">
+                    <div class="form-group col-md-3">
+                        @Html.LabelFor(model => model.Gen_Member, htmlAttributes: new { @class = "control-label" })
+                        @Html.EditorFor(model => model.Gen_Member, new { htmlAttributes = new { @class = "form-control", @Readonly = true } })
+                        @Html.ValidationMessageFor(model => model.Gen_Member, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group col-md-3">
                         @Html.LabelFor(model => model.Gen_MemberMax, htmlAttributes: new { @class = "control-label" })
                         @Html.EditorFor(model => model.Gen_MemberMax, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Gen_MemberMax, "", new { @class = "text-danger" })
                     </div>
 
-                    <div class="form-group col-md-4">
+                    <div class="form-group col-md-3">
                         @Html.LabelFor(model => model.Gen_Year, htmlAttributes: new { @class = "control-label" })
                         @Html.EditorFor(model => model.Gen_Year, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Gen_Year, "", new { @class = "text-danger" })
                     </div>
 
-                    <div class="form-group col-md-4">
+                    <div class="form-group col-md-3">
                         @Html.LabelFor(model => model.Gen_Fee, htmlAttributes: new { @class = "control-label" })
                         @Html.EditorFor(model => model.Gen_Fee, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Gen_Fee, "", new { @class = "text-danger" })
@@ -105,3 +122,6 @@
     </section>
 }
 
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
