--- a/CSManagement/CSManagement/Views/Generations/Registers.cshtml
+++ b/CSManagement/CSManagement/Views/Generations/Registers.cshtml
@@ -99,13 +99,13 @@
                         <a class="btn btn-default col-md-3" style="float:left;font-size:18px" href="@Url.Action("IndexUser", "Generations")"><i class="fa fa-mail-reply"></i> ย้อนกลับ</a>
                         @if (ViewBag.genList != null)
                         {
-                            if (ViewBag.genList.Gen_Status1.Gen_Name.Equals("เปิดการรับสมัคร"))
+                            if (ViewBag.genList.Gen_Status1.Gen_Name.Equals("เปิดรับสมัคร"))
                             {
-                                <button type="submit" class="btn btn-success col-md-3" style="float:right;font-size:18px"><i class="fa fa-plus"></i> สมัครอบรม</button>
+                                <button type="submit" class="btn btn-success col-md-3" style="float:right;font-size:18px"><i class="fa fa-plus"></i> สมัครเข้าอบรม</button>
                             }
                             else
                             {
-                                <button type="submit" class="btn btn-danger col-md-3" style="float:right; font-size: 18px" onclick="return false;"><i class="fa fa-close"></i> ปิดสมัครอบรม</button>
+                                <button type="submit" class="btn btn-danger col-md-3" style="float:right; font-size: 18px" onclick="return false;"><i class="fa fa-close"></i> การสมัครอบรมปิดแล้ว</button>
                             }
                         }
                     </div>
