--- a/CSManagement/CSManagement/Views/Projects/Edit.cshtml
+++ b/CSManagement/CSManagement/Views/Projects/Edit.cshtml
@@ -109,12 +109,23 @@
                         @Html.EditorFor(model => model.Pj_Linkweb, new { htmlAttributes = new { @class = "form-control", @PlaceHolder = "Copy ลิ้งค์เว็บไซต์มาวาง" } })
                         @Html.ValidationMessageFor(model => model.Pj_Linkweb, "", new { @class = "text-danger" })
                     </div>
-                    
-                    <div class="form-group col-lg-4">
-                        @Html.LabelFor(model => model.Pj_Rate, htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.Pj_Rate, new { htmlAttributes = new { @class = "form-control", @PlaceHolder = "ใส่ตัวเลข 1-5" } })
-                        @Html.ValidationMessageFor(model => model.Pj_Rate, "", new { @class = "text-danger" })
-                    </div>
+
+                    @if (Session["AJ"] != null)
+                    {
+                        <div class="form-group col-lg-4">
+                            @Html.LabelFor(model => model.Pj_Rate, htmlAttributes: new { @class = "control-label" })
+                            @Html.EditorFor(model => model.Pj_Rate, new { htmlAttributes = new { @class = "form-control", @PlaceHolder = "ใส่ตัวเลข 1-5" } })
+                            @Html.ValidationMessageFor(model => model.Pj_Rate, "", new { @class = "text-danger" })
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="form-group col-lg-4">
+                            @Html.LabelFor(model => model.Pj_Rate, htmlAttributes: new { @class = "control-label" })
+                            @Html.EditorFor(model => model.Pj_Rate, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+                            @Html.ValidationMessageFor(model => model.Pj_Rate, "", new { @class = "text-danger" })
+                        </div>
+                    }
                 </div>
 
                 <div class="row">
@@ -148,3 +159,28 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+
+<script>
+    $("#Stu_Name").autocomplete({
+        source: function(request, response) {
+            $.ajax({
+                url: '@Url.Action("GetSearchValue","Histories")',
+                dataType: "json",
+                data: { search: $("#Stu_Name").val() },
+                success: function(data) {
+                    response($.map(data,
+                        function(item) {
+                            return { label: item.Stu_Name, value: item.Stu_ID };
+                        }));
+                },
+                error: function(xhr, status, error) {
+                    alert("Error");
+                }
+            });
+        }
+    });
+</script>
