--- a/CSManagement/CSManagement/Views/Shared/_LayoutUser.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_LayoutUser.cshtml
@@ -215,7 +215,12 @@
                             {
                                 <li class="dropdown user user-menu">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                        <img src="~/img/icons8-cat-profile-64.png" class="user-image" alt="User Image">
+                                        @if (Session["UserImg"].ToString().Equals("รอแก้ไข") != true)
+                                        {
+                                            <img src="~/img/@Session["UserImg"]" class="user-image" alt="User Image">
+                                        }
+                                        else
+                                        {<img src="~/img/icons8-cat-profile-64.png" class="user-image" alt="User Image">}
                                         <span class="hidden-xs">@Session["UserName"].ToString() @Session["UserSurname"].ToString()</span>
                                     </a>
 
@@ -226,7 +231,9 @@
                                                 <img src="~/img/@Session["UserImg"]" class="img-circle" alt="User Image">
                                             }
                                             else
-                                            {<img src="~/img/icons8-cat-profile-64.png" class="img-circle" alt="User Image">}
+                                            {
+                                                <img src="~/img/icons8-cat-profile-64.png" class="img-circle" alt="User Image">
+                                            }
 
                                             <p style="color: #111111">
                                                 @Session["UserName"].ToString()
@@ -445,7 +452,7 @@
                 function (e) {
                     e.preventDefault();
                     $.ajax({
-                        url: "@Url.Action("Login","Logins")",
+                        url: href = '@Url.Action("Login","Logins")',
                         method: "POST",
                         data: new FormData(this),
                         contentType: false,
@@ -455,7 +462,7 @@
                                 document.getElementById("usernameCK1").innerHTML = "ชื่อผู้ใช้หรือรหัสผ่านผิด";
                                 document.getElementById("passwordCK1").innerHTML = "ชื่อผู้ใช้หรือรหัสผ่านผิด";
                             } else {
-                                window.location.href = "@Url.Action("Index","Home")";
+                                window.location.href = '@Url.Action("Index", "Home")';
                             }
                         }
 
@@ -479,7 +486,7 @@
                 function (e) {
                     e.preventDefault();
                     $.ajax({
-                        url: "@Url.Action("Register","Logins")",
+                        url: '@Url.Action("Register","Logins")',
                         method: "POST",
                         data: new FormData(this),
                         contentType: false,
@@ -490,7 +497,7 @@
                                 document.getElementById("passwordCK2").innerHTML = "กรุณากรอกข้อมูลให้ถูกต้อง";
                                 document.getElementById("repasswordCK2").innerHTML = "กรุณากรอกข้อมูลให้ถูกต้อง";
                             } else {
-                                window.location.href = "@Url.Action("Index","Home")";
+                                window.location.href = '@Url.Action("Index", "Home")';
                             }
                         }
 
