--- a/CSManagement/CSManagement/Views/Students/Edit.cshtml
+++ b/CSManagement/CSManagement/Views/Students/Edit.cshtml
@@ -169,7 +169,7 @@
         {
             <script type="text/javascript">
                 window.onload = function () {
-                    alert("@ViewBag.Message");
+                    alert(@ViewBag.Message);
                 };
             </script>
         }
